--- a/app/assets/stylesheets/bookmark.scss
+++ b/app/assets/stylesheets/bookmark.scss
@@ -1,3 +1,73 @@
 // Place all the styles related to the bookmark controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.cards {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  height: 100%;
+  width: 100%;
+
+  .card {
+    width: 45%;
+    height: 450px;
+    margin: 1rem;
+    border-color: #d1d9e6;
+    box-shadow: 3px 3px 6px #b8b9be, -3px -3px 6px #fff;
+    border-radius: 5px;
+    // padding: 0.5rem;
+
+    .img {
+      width: 100%;
+      height: 200px;
+      object-fit: cover;
+    }
+
+    .card-title {
+      font-weight: bold;
+    }
+
+    .comment {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .title {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .card-text {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 170px;
+    }
+  }
+
+}
+
+.count {
+  position: absolute;
+  bottom: 10px;
+  right: 50px;
+  color: #fff;
+}
+
+.card-category {
+  position: relative;
+  background-size: cover;
+  background-position: center;
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 24px;
+  font-weight: bold;
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+}
