--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -1,5 +1,8 @@
-<%= simple_form_for([@list, @bookmark]) do |f| %>
-  <%= f.association :movie %>
-  <%= f.input :comment %>
-  <%= f.submit "Submit new bookmark", class: "btn btn-primary" %>
-<% end %>
+<div class="container">
+  <%= render "navbar", list: @list %>
+  <%= simple_form_for([@list, @bookmark]) do |f| %>
+    <%= f.association :movie %>
+    <%= f.input :comment %>
+    <%= f.submit "Submit new bookmark", class: "morph_button" %>
+  <% end %>
+</div>
