--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -10,7 +10,7 @@
       <%= link_to list do %>
         <div class="list" style="background:linear-gradient(to bottom,
         rgba(0, 0, 0, 0.4),
-        rgba(0, 0, 0, 0.4)), no-repeat url('<%= list.picture_url%>') center center/cover;">
+        rgba(0, 0, 0, 0.4)), no-repeat url('<%= cl_image_path list.photo.key%>') center center/cover;">
           <h1 class="text-center font-weight-bold"><%=list.name%></h1>
         </div>
       <% end %>
