--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <%= render "navbar", list: @list %>
   <%= simple_form_for([@list, @bookmark]) do |f| %>
-    <%= f.association :movie %>
+    <%= f.association :movie, prompt: "Choose a movie" %>
     <%= f.input :comment %>
     <%= f.submit "Submit new bookmark", class: "morph_button" %>
   <% end %>
