--- a/app/assets/stylesheets/movie.scss
+++ b/app/assets/stylesheets/movie.scss
@@ -1,3 +1,22 @@
 // Place all the styles related to the movie controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.body {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 1fr;
+  margin-top: 1.5rem;
+}
+
+.casting {
+  grid-area: 1 / 1 / 2 / 2;
+
+  p {
+    font-size: 1.5rem;
+  }
+
+}
+
+.review {
+  grid-area: 1 / 2 / 2 / 3;
+}
