--- a/app/assets/stylesheets/bookmark.scss
+++ b/app/assets/stylesheets/bookmark.scss
@@ -62,7 +62,8 @@
   position: relative;
   background-size: cover;
   background-position: center;
-  height: 300px;
+  width: 100%;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
