--- a/app/assets/stylesheets/movie.scss
+++ b/app/assets/stylesheets/movie.scss
@@ -3,20 +3,158 @@
 // You can use Sass (SCSS) here: https://sass-lang.com/
 .body {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: 1fr;
+  grid-template-columns: repeat(3, 1fr) 0.5fr 0.8fr;
+  grid-template-rows: repeat(5, 1fr);
+  grid-column-gap: 20px;
   margin-top: 1.5rem;
+  height: 100%;
+  width: 100%;
 }
 
-.casting {
-  grid-area: 1 / 1 / 2 / 2;
+.index_title {
+  padding-left: 1.5rem;
+}
+
+.movie_show_card {
+  display: flex;
+  justify-content: center;
+  grid-area: 2 / 1 / 5 / 2;
+
+  img {
+    width: 18rem;
+    height: auto;
+    border-radius: 8px;
+  }
+
+  align-items: center;
+}
+
+.overview {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  grid-area: 2 / 2 / 5 / 4;
+  height: 100%;
+  width: 100%;
+  gap: 1.5rem;
+  margin-left: 8rem;
+
+
 
   p {
     font-size: 1.5rem;
   }
 
+  .info {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+
+
+  .genres {
+    display: flex;
+
+    .genre {
+      border-radius: 8px;
+      border: 1px solid #fff;
+      padding: 0.4rem;
+      margin-right: 1rem;
+    }
+  }
 }
 
-.review {
-  grid-area: 1 / 2 / 2 / 3;
+
+
+.casting {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  grid-area: 2 / 5 / 5 / 6;
+
+  img {
+    width: 5.5rem;
+    height: auto;
+    border-radius: 8px;
+  }
+
+  p {
+    font-size: 1rem;
+    font-weight: 500;
+  }
+}
+
+.containers {
+  margin-top: 8rem;
+}
+
+.swiper-container {
+  overflow: visible;
+}
+
+
+p {
+  font-size: 1.7rem;
+  font-weight: 500;
+}
+
+.swiper-slide {
+  // transition: all 300ms ease-in-out;
+  border-radius: 5px;
+}
+
+.swiper-slide img {
+  border-radius: 8px;
+  max-width: 18rem;
+  height: 16.8rem;
+  cursor: grab;
+  margin: 1rem;
+}
+
+.swiper-slide img:active {
+  cursor: grabbing;
+}
+
+.swiper-slide:hover {
+  transform: scale(1.5);
+  transition: all 300ms ease-in-out;
+  z-index: 1;
+}
+
+.swiper-slide:hover img {
+  // transition-delay: 300ms;
+  box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.5);
+}
+
+@media screen and (max-width: 599px) {
+  .swiper-slide img {
+    max-width: 14rem;
+  }
+
+  .swiper-button-next,
+  .swiper-button-prev {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .swiper-slide img {
+    max-width: 10.5rem;
+    border-radius: 2px;
+  }
+}
+
+.trailer {
+  height: 100%;
+  width: 100%;
+  display: grid;
+  place-items: center;
+
+  .video_trailer {
+    border-radius: 8px;
+    height: 80%;
+    width: 80%;
+  }
 }
