--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -3,7 +3,7 @@
   <div class="swiper-container">
     <div class="swiper-wrapper">
       <% @upcoming.each do |movie| %>
-        <div class="swiper-slide">
+        <div class="swiper-slide card-hover">
           <%= link_to movie_path(movie.id) do %>
             <%= image_tag "https://image.tmdb.org/t/p/w500/#{movie['poster_path']}" %>
           <% end %>
@@ -16,7 +16,7 @@
   <div class="swiper-container">
     <div class="swiper-wrapper">
       <% @top_rated.each do |movie| %>
-        <div class="swiper-slide">
+        <div class="swiper-slide card-hover">
           <%= link_to movie_path(movie.id) do %>
             <%= image_tag "https://image.tmdb.org/t/p/w500/#{movie['poster_path']}" %>
           <% end %>
@@ -29,7 +29,7 @@
   <div class="swiper-container">
     <div class="swiper-wrapper">
       <% @popular.each do |movie| %>
-        <div class="swiper-slide">
+        <div class="swiper-slide card-hover">
           <%= link_to movie_path(movie.id) do %>
             <%= image_tag "https://image.tmdb.org/t/p/w500/#{movie['poster_path']}" %>
           <% end %>
