--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,4 +1,5 @@
-<div class="containers">
+<div class="container-fluid">
+
   <h2 class="index_title">Nouveautés</h2>
   <div class="swiper-container">
     <div class="swiper-wrapper">
