--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,37 +1,43 @@
-<div>
-  <div class="card-category" style="background:linear-gradient(to bottom,
+<div class = "container-fluid">
+  <div class="position-relative">
+    <div class="card-category" style="background:linear-gradient(to bottom,
         rgba(0, 0, 0, 0.4),
         rgba(0, 0, 0, 0.4)), no-repeat url('<%= cl_image_path @list.photo.key%>') center center/cover;">
-    <h1><%= @list.name %></h1>
-    <p class= "count btn btn-success"><%= @list.bookmarks.count%> Movies</p>
+      <h1><%= @list.name %></h1>
+    </div>
+    <span class="movie-tag"><%= pluralize(@list.movies.size, 'movie') %></span>
   </div>
-  <div class="add_btn"><%= link_to "Add Movie", new_list_bookmark_path(@list,@bookmark) , :class => "morph_button "%></div>
-  <div class="cards">
-    <%@list.bookmarks.each do |bookmark|%>
-    <%= link_to movie_path(bookmark.movie) do %>
-      <div class="card">
-        <div class="img"  style="background:linear-gradient(to bottom,
-        rgba(0, 0, 0, 0.4),
-        rgba(0, 0, 0, 0.4)), no-repeat url('<%= bookmark.movie.poster_url%>') center center/cover;"></div>
-        <div class="card-body">
-          <div class="title">
-            <h5 class="card-title"><%= bookmark.movie.title %></h5>
-            <p><%=bookmark.movie.rating  %> <i class="fa fa-star"></i></p>
-          </div>
-          <div class="card-text">
-            <p><%= bookmark.movie.overview %> </p>
-          </div>
-          <div class="comment">
-            <p><i class="fas fa-quote-left"></i><%= bookmark.comment %> </p>
-            <p><%= link_to "Remove", list_bookmark_path(bookmark),
-                    method: :delete,
-                    data: { confirm: "Are you sure?" },
-                    class: 'ms-3 text-danger '
-                %></p>
+  <div class="container mb-5">
+    <div class="d-flex justify-content-between my-4">
+      <span class="mb-2 d-block"><small><em class="text-muted"><%= "You haven't saved any movies yet!" if @list.movies.empty? %></em></small></span>
+      <div>
+        <button type="button" class="btn btn-flat" data-bs-toggle="modal" data-bs-target="#new_movie_modal">
+          add a movie
+        </button>
+        <%= link_to "delete this list", list_path(@list), method: :delete, class: "btn btn-cancel", data: { confirm: "Are you sure you want to delete this list?" } %>
+      </div>
+    </div>
+    <div class="row my-2">
+      <% @list.movies.each do |movie| %>
+        <% bookmark = Bookmark.find_by(list: @list, movie: movie) %>
+        <div class="col-12 col-sm-6 mb-4" data-aos="zoom-in">
+          <div class="bg-white rounded shadow h-100">
+            <%= image_tag movie.poster_url, alt: movie.title, class: "movie-img rounded-top" %>
+            <div class="p-3 rounded-bottom d-flex flex-column">
+              <strong><%= movie.title %> <span class="text-muted font-weight-normal">• <%= movie.rating %> <i class="fas fa-star star-yellow"></i></span></strong>
+              <small class="text-muted"><%= movie.overview %></small>
+              <div class="d-flex align-items-end justify-content-between pt-4">
+                <div>
+                  <i class="fas fa-quote-left me-2"></i><small class="flex-grow-1"><%= bookmark.comment %></small>
+                </div>
+                <small class="text-right flex-shrink-0"><%= link_to "delete", bookmark_path(bookmark), method: :delete, data: { confirm: "Are you sure you want to remove #{movie.title} from your #{@list.name} list"}, class: 'text-danger' %></small>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
-      <% end%>
-    <%end%>
+      <% end %>
+    </div>
+
   </div>
+
 </div>
