--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -1,7 +1,9 @@
+<br>
+<br>
+<br>
 <div class="container">
- 
   <%= simple_form_for([@list, @bookmark]) do |f| %>
-    <%= f.association :movie, prompt: "Choose a movie" %>
+    <%= f.input :movie, prompt: "Choose a movie" %>
     <%= f.input :comment %>
     <%= f.submit "Submit new bookmark", class: "morph_button" %>
   <% end %>
