--- a/app/assets/stylesheets/bookmark.scss
+++ b/app/assets/stylesheets/bookmark.scss
@@ -63,7 +63,7 @@
   background-size: cover;
   background-position: center;
   width: 100%;
-  height: 100%;
+  height: 15rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -73,4 +73,5 @@
   text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
 }
+
 // ACORDION
