--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,20 +1,16 @@
-<div class = "container-fluid">
-  <div class="position-relative">
-    <div class="card-category" style="background:linear-gradient(to bottom,
+<div class = "list-show">
+  <div class="card-category" style="background:linear-gradient(to bottom,
         rgba(0, 0, 0, 0.4),
         rgba(0, 0, 0, 0.4)), no-repeat url('<%= cl_image_path @list.photo.key%>') center center/cover;">
-      <h1><%= @list.name %></h1>
-    </div>
-    <span class="movie-tag"><%= pluralize(@list.movies.size, 'movie') %></span>
+    <h1><%= @list.name %></h1>
+    <span class="movie-tag"><%= pluralize @list.movies.size, 'movie' %></span>
   </div>
   <div class="container mb-5">
     <div class="d-flex justify-content-between my-4">
       <span class="mb-2 d-block"><small><em class="text-muted"><%= "You haven't saved any movies yet!" if @list.movies.empty? %></em></small></span>
       <div>
-        <button type="button" class="btn btn-flat" data-bs-toggle="modal" data-bs-target="#new_movie_modal">
-          add a movie
-        </button>
-        <%= link_to "delete this list", list_path(@list), method: :delete, class: "btn btn-cancel", data: { confirm: "Are you sure you want to delete this list?" } %>
+        <%= link_to "Ajouter un film",   new_list_bookmark_path(@list) %>
+        <%= link_to "Supprimer la liste", list_path(@list), method: :delete, class: "btn btn-cancel", data: { confirm: "Vous ête sûre? vous allez supprimer la liste et tous les films" } %>
       </div>
     </div>
     <div class="row my-2">
@@ -37,7 +33,5 @@
         </div>
       <% end %>
     </div>
-
   </div>
-
 </div>
