ajout a une liste depuis la show

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="containers">
 
   <h2 class="index_title">Nouveautés</h2>
   <div class="swiper-container">
