--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -1,9 +1,7 @@
-<br>
-<br>
-<br>
-<div class="container">
+
+<div class="containers">
   <%= simple_form_for([@list, @bookmark]) do |f| %>
-    <%= f.input :movie, prompt: "Choose a movie" %>
+    <%= f.collection :list, prompt: "Choose a list" %>
     <%= f.input :comment %>
     <%= f.submit "Submit new bookmark", class: "morph_button" %>
   <% end %>
