debug show movie

--- a/app/assets/stylesheets/movie.scss
+++ b/app/assets/stylesheets/movie.scss
@@ -149,6 +149,11 @@ p {
   font-weight: 500;
 }
 
+.card-category-movie {
+  height: 100%;
+  width: 100%;
+}
+
 .swiper-slide {
   // transition: all 300ms ease-in-out;
   border-radius: 5px;
