--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,17 +1,16 @@
 <div
-  class="card-category"
+  class="card-category-movie"
   style="background:linear-gradient(to bottom,
         rgba(0, 0, 0, 0.6),
         rgba(0, 0, 0, 0.6)), no-repeat url('https://image.tmdb.org/t/p/original/<%= @movie.backdrop_path%>') center center/cover;"
 >
-
   <div class="body">
-      <div class="movie_show_card card-hover">
-        <%= image_tag "https://image.tmdb.org/t/p/w500/#{@movie.poster_path}" %>
+    <div class="movie_show_card card-hover">
+      <%= image_tag "https://image.tmdb.org/t/p/w500/#{@movie.poster_path}" %>
       <div class="btn-show">
-      <%= link_to "Ajouter à ma liste",  new_list_bookmark_path(@list) %>
+
       </div>
-      </div>
+    </div>
     <div class="overview">
       <div class="info">
         <h1><%= @movie.title %></h1>
@@ -22,7 +21,6 @@
             </span>
           <% end %>
         </div>
-
         <p><%= @movie.overview %></p>
       </div>
     </div>
@@ -36,31 +34,28 @@
   </div>
 </div>
 <div class="trailer">
-<% if @trailer.empty?%>
-<p>Désolé pas de pas de bande annonce </p>
+  <% if @trailer.empty?%>
+    <p>Désolé pas de pas de bande annonce </p>
   <% else %>
-  <iframe
+    <iframe
     class="video_trailer"
     src="https://www.youtube.com/embed/<%=@trailer[0]['key'] %>"
     frameborder="0"
     allowfullscreen
 
   ></iframe>
-
   <%end %>
 </div>
-
 <!--test -->
-
- <h2>Films similaires à <%= @movie.title %> </h2>
-  <div class="swiper-container">
-    <div class="swiper-wrapper">
-      <% @similar.each do |movie| %>
-        <div class="swiper-slide card-hover">
-          <%= link_to movie_path(movie.id) do %>
-            <%= image_tag "https://image.tmdb.org/t/p/w500/#{movie['poster_path']}" %>
-          <% end %>
-        </div>
-      <% end %>
-    </div>
+<h2>Films similaires à <%= @movie.title %> </h2>
+<div class="swiper-container">
+  <div class="swiper-wrapper">
+    <% @similar.each do |movie| %>
+      <div class="swiper-slide card-hover">
+        <%= link_to movie_path(movie.id) do %>
+          <%= image_tag "https://image.tmdb.org/t/p/w500/#{movie['poster_path']}" %>
+        <% end %>
+      </div>
+    <% end %>
   </div>
+</div>
