--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -8,7 +8,7 @@
     <div class="movie_show_card card-hover">
       <%= image_tag "https://image.tmdb.org/t/p/w500/#{@movie.poster_path}" %>
       <div class="btn-show">
-
+        <%= link_to "Ajouter à ma liste"   %>
       </div>
     </div>
     <div class="overview">
