create movie via api

--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -1,8 +1,7 @@
-
 <div class="containers">
-  <%= simple_form_for([@list, @bookmark]) do |f| %>
-    <%= f.collection :list, prompt: "Choose a list" %>
-    <%= f.input :comment %>
+  <%= simple_form_for [@bookmark,@movie] do |f| %>
+    <%= f.association :list, prompt: "Choose a list" %>
+    <%= f.input :comment, placeholder: 'Enter a comment about the movie' %>
     <%= f.submit "Submit new bookmark", class: "morph_button" %>
   <% end %>
 </div>
