--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -2,26 +2,26 @@
   class="card-category-movie"
   style="background:linear-gradient(to bottom,
         rgba(0, 0, 0, 0.6),
-        rgba(0, 0, 0, 0.6)), no-repeat url('https://image.tmdb.org/t/p/original/<%= @movie.backdrop_path%>') center center/cover;"
+        rgba(0, 0, 0, 0.6)), no-repeat url('https://image.tmdb.org/t/p/original/<%= @moviedetail.backdrop_path%>') center center/cover;"
 >
   <div class="body">
     <div class="movie_show_card card-hover">
-      <%= image_tag "https://image.tmdb.org/t/p/w500/#{@movie.poster_path}" %>
+      <%= image_tag "https://image.tmdb.org/t/p/w500/#{@moviedetail.poster_path}" %>
       <div class="btn-show">
-        <%= link_to "Ajouter à ma liste"   %>
+        <%= link_to "Ajouter à ma liste",  new_movie_bookmark_path(@movie)  %>
       </div>
     </div>
     <div class="overview">
       <div class="info">
-        <h1><%= @movie.title %></h1>
+        <h1><%= @moviedetail.title %></h1>
         <div class="genres">
-          <% @movie.genres.each do |movie| %>
+          <% @moviedetail.genres.each do |movie| %>
             <span class="genre">
               <%= movie.name %>
             </span>
           <% end %>
         </div>
-        <p><%= @movie.overview %></p>
+        <p><%= @moviedetail.overview %></p>
       </div>
     </div>
     <div class="casting card-hover">
@@ -47,7 +47,7 @@
   <%end %>
 </div>
 <!--test -->
-<h2>Films similaires à <%= @movie.title %> </h2>
+<h2>Films similaires à <%= @moviedetail.title %> </h2>
 <div class="swiper-container">
   <div class="swiper-wrapper">
     <% @similar.each do |movie| %>
